[metadata]
name = oeis
# Format is YYYY.MM.DD (https://calver.org/)
version = 2020.1.20
description = Implementation of a few integer sequences from the OEIS.
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
author = Julien Palard
author_email = julien@palard.fr
url = https://github.com/JulienPalard/oeis
license = MIT License
classifiers =
  Development Status :: 5 - Production/Stable
  Intended Audience :: Developers
  License :: OSI Approved :: MIT License
  Natural Language :: English
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8

[options]
py_modules = oeis
python_requires = >= 3.6
install_requires =
  matplotlib
  sympy

[options.entry_points]
console_scripts = oeis=oeis:main
