[metadata]
name = oeis
version = attr: oeis.__version__
description = Implementation of a few integer sequences from the OEIS.
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
author = Julien Palard
author_email = julien@palard.fr
url = https://github.com/JulienPalard/oeis
license = MIT License
classifiers =
  Development Status :: 5 - Production/Stable
  Intended Audience :: Developers
  License :: OSI Approved :: MIT License
  Natural Language :: English
  Programming Language :: Python :: 3

[options]
py_modules = oeis
python_requires = >= 3.7
install_requires =
  matplotlib>=2<4
  sympy>=1<2

[options.entry_points]
console_scripts = oeis=oeis:main
